test: keep Gate6 contract tests Java 8 compatible